fix the last changes for fix on ie6 browser

--- a/css/participede.css
+++ b/css/participede.css
@@ -1,4 +1,4 @@
-body { font: normal 11px auto Arial, Verdana, Helvetica, sans-serif; margin: 0; background: #dceffe; }
+body { font: normal 11px auto Arial, Verdana, Helvetica, sans-serif; margin: 0; background: transparent none; }
 
 a { color: #f6ae19; }
 
